--- a/assets/page/the.css
+++ b/assets/page/the.css
@@ -5,6 +5,7 @@ html {
   display: table;
   width: 100%;
   height: 100%;
+  background-color: #c60c30;
 }
 
 body {
@@ -12,4 +13,6 @@ body {
   vertical-align: middle;
   text-align: center;
   font-weight: bold;
+  color: white;
+  text-shadow: 0 0 5px #003478;
 }
