--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -3,4 +3,5 @@
     android:id="@+id/web_view"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="#c60c30"
 />
